// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH fZayOF"
  >
    <div
      class="sc-htpNat jUgmOU"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bdVaJa eDCunu"
        >
          <img
            src="https://via.placeholder.com/150"
          />
        </div>
      </a>
    </div>
    <div
      class="sc-bxivhb eJagWW"
    >
      <div>
        <div
          class="sc-ifAKCX jaloVz"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-EHOje gQKhmz"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-bZQynM eGYnrK"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        href="https://www.thetimes.co.uk"
      >
        Read the full article
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH fZayOF"
  >
    <div
      class="sc-bxivhb cfsDhB"
    >
      <div>
        <div
          class="sc-ifAKCX ctuDdC"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-EHOje fmOCOs"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        href="https://www.thetimes.co.uk"
      >
        Read more
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div>
     PlaceholderContainer 
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
